--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -11,8 +11,8 @@ body {
   background: #eeeceb;
 }
 footer {
-  position: fixed;
-  background: #10182f;
+  position: relative;
+  background: #e9eaf0;
   width: 100%;
   bottom: 0;
   left: 0;
@@ -38,7 +38,6 @@ footer .content .top {
   margin-bottom: 50px;
 }
 .content .top .logo-details {
-  color: #fff;
   font-size: 30px;
 }
 .content .top .media-icons {
@@ -58,38 +57,38 @@ footer .content .top {
 }
 .top .media-icons a:nth-child(1) {
   background: #4267b2;
+  opacity: 1;
 }
 .top .media-icons a:nth-child(1):hover {
-  color: #4267b2;
-  background: #fff;
+  opacity: 0.6;
 }
 .top .media-icons a:nth-child(2) {
   background: #1da1f2;
+  opacity: 1;
 }
 .top .media-icons a:nth-child(2):hover {
-  color: #1da1f2;
-  background: #fff;
+  opacity: 0.6;
 }
 .top .media-icons a:nth-child(3) {
   background: #e1306c;
+  opacity: 1;
 }
 .top .media-icons a:nth-child(3):hover {
-  color: #e1306c;
-  background: #fff;
+  opacity: 0.6;
 }
 .top .media-icons a:nth-child(4) {
   background: #0077b5;
+  opacity: 1;
 }
 .top .media-icons a:nth-child(4):hover {
-  color: #0077b5;
-  background: #fff;
+  opacity: 0.6;
 }
 .top .media-icons a:nth-child(5) {
   background: #ff0000;
+  opacity: 1;
 }
 .top .media-icons a:nth-child(5):hover {
-  color: #ff0000;
-  background: #fff;
+  opacity: 0.6;
 }
 footer .content .link-boxes {
   width: 100%;
@@ -100,7 +99,7 @@ footer .content .link-boxes .box {
   width: calc(100% / 5 - 10px);
 }
 .content .link-boxes .box .link_name {
-  color: #fff;
+  color: black;
   font-size: 18px;
   font-weight: 400;
   margin-bottom: 10px;
@@ -113,18 +112,18 @@ footer .content .link-boxes .box {
   bottom: -2px;
   height: 2px;
   width: 35px;
-  background: #fff;
+  background: black;
 }
 .content .link-boxes .box li {
   margin: 6px 0;
   list-style: none;
 }
 .content .link-boxes .box li a {
-  color: #fff;
-  font-size: 14px;
+  color: black;
+  font-size: 12px;
   font-weight: 400;
   text-decoration: none;
-  opacity: 0.8;
+  opacity: 0.7;
   transition: all 0.4s ease;
 }
 .content .link-boxes .box li a:hover {
@@ -151,22 +150,22 @@ footer .content .link-boxes .box {
   font-size: 16px;
 }
 .link-boxes .input-box input[type="button"] {
-  background: #fff;
-  color: #3824d2;
+  background: #3824d2;
+  color: #fff;
   border: none;
   font-size: 18px;
   font-weight: 500;
   margin: 4px 0;
-  opacity: 0.8;
+  opacity: 1;
   cursor: pointer;
   transition: all 0.4s ease;
 }
 .input-box input[type="button"]:hover {
-  opacity: 1;
+  opacity: 0.8;
 }
 footer .bottom-details {
   width: 100%;
-  background: #2e2748;
+  background: #3824d2
 }
 footer .bottom-details .bottom_text {
   max-width: 1250px;
