--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -1,4 +1,3 @@
-
 .setup {
   display: flex;
   justify-content: center;
@@ -7,51 +6,77 @@
 }
 
 .login-container {
-  width: 350px;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #faf7f7; /* Background color applied to the container */
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.image-container {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f9f9f9; /* Background color for image container */
+}
+
+.login-image {
+  max-width: 100%;
+  height: auto;
+  max-height: 100%;
 }
 
 .form-container {
-  margin-top: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #dce7e9; /* Background color for form container */
+  padding: 1rem;
 }
 
 .label {
-  display: block;
-  margin-bottom: 5px;
+  margin-bottom: 0.5rem;
 }
 
 .input {
+  padding: 0.5rem;
+  border: 1px solid #d1d5db;
+  border-radius: 0.25rem;
   width: 100%;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+  margin-bottom: 1rem;
 }
 
 .button {
-  width: 100%;
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
+  padding: 0.5rem 1rem;
+  background-color: #58a6ff;
+  color: #fff;
   border: none;
-  border-radius: 3px;
+  border-radius: 0.25rem;
   cursor: pointer;
-  margin-top: 10px;
 }
 
 .button:hover {
-  background-color: #0056b3;
+  background-color: #4d8dd7;
 }
 
 .link {
+  color: #58a6ff;
   text-decoration: none;
-  color: #007bff;
+}
+
+.link:hover {
+  text-decoration: underline;
 }
 
 .error-message {
   color: red;
-  margin-top: 10px;
 }
 
+@media (max-width: 768px) {
+  .image-container,
+  .form-container {
+    flex: none; /* Prevent side by side layout on small screens */
+    width: 100%;
+  }
+}
