--- a/client/src/components/signup.css
+++ b/client/src/components/signup.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #d7e0eb !important;
+}
+
 .setup {
     display: flex;
     justify-content: center;
@@ -81,3 +85,113 @@
     }
   }
   
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.bckg {
+  padding-left: 70px;
+  padding-right: 70px;
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+
+.register-container {
+  display: flex;
+  width: 100%;
+  height: 10%;
+  border-radius: 30px;
+  padding-bottom: 90px;
+}
+
+.image-container {
+  border-radius: 30px 0 0 30px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-container {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #9eccfa;
+  padding: 1rem;
+  border-radius: 0 30px 30px 0;
+}
+
+.form-container h1 {
+  margin-top: 10px; /* Reset the default margin */
+  margin-bottom: 10px; /* Add margin between h1 and h2 */
+}
+
+.form-container h2 {
+  /* Reset the default margin */
+  font-style: normal;
+  font-weight: normal !important;
+  font-size: 0.9em;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.form-container label {
+  margin-top: 10px !important;
+  display: block !important;
+  text-align: left !important;
+  padding-right: 350px !important;
+  margin-bottom: -20px !important; /* Reduce margin-bottom */
+  font-weight: bold !important;
+}
+
+.form-container input {
+  /* padding: 0.5rem !important; */
+  border: 1px solid #d1d5db !important;
+  border-radius: 10px;
+  width: 100% !important;
+  height: 2.5rem !important; /* Increase the height of the input field */
+  margin-bottom: 10px !important;
+  padding-left: 10px !important; /* Add padding to the left of the input field */
+}
+
+.form-container button {
+  padding: 0.5rem 1rem !important;
+  background-color: #1d2dbb;
+  color: #fff;
+  border: none;
+  border-radius: 10px !important;
+  cursor: pointer;
+  width: 100% !important;
+  height: 2.5rem !important;
+  margin-top: 10px !important;
+  margin-bottom: 15px !important;
+}
+
+.form-container button:hover {
+  background-color: #4d8dd7;
+}
+
+.link {
+  color: #58a6ff;
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+
+.error-message {
+  color: red;
+}
+
+@media (max-width: 768px) {
+  .image-container,
+  .form-container {
+    flex: none;
+    width: 100%;
+  }
+}
