--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -14,7 +14,7 @@
 .logo {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #3824d2;
+  color:white;
 }
 
 .Navlinks {
@@ -25,7 +25,7 @@
 .nav-link {
   margin-left: 15px;
   text-decoration: none;
-  color: #3824d2;
+  color: white;
   font-weight: bold;
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out; /* Added transition for background-color */
   padding: 10px 20px; /* Adjusted padding for better spacing */
