--- a/client/src/components/Pages/Careers.css
+++ b/client/src/components/Pages/Careers.css
@@ -1,4 +1,72 @@
-.careers-container h1{
-    margin-top: 45px;
-    text-align: center;
+
+
+.careers-container {
+  margin-top: 50px;
+  padding: 20px;
+  background-color: rgba(255, 215, 0, 0);
+  margin-bottom: 50px;
+}
+
+.content {
+  max-width: 800px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+.job-listings {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+}
+
+.job-item {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.job-item h3 {
+  color: #333;
+}
+
+.content p{
+    color: #333 !important;
+}
+h2{
+    margin-top:40px;
+    margin-bottom: 40px;
+}
+
+.job-item p {
+  color: #666;
+}
+
+.apply-btn {
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.apply-btn:hover {
+  background-color: #0056b3;
+}
+
+.contact-info {
+  margin-top: 30px;
+  text-align: center;
+  font-style: italic;
+}
+
+.contact-info a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.contact-info a:hover {
+  text-decoration: underline;
 }
