--- a/client/src/components/signup.css
+++ b/client/src/components/signup.css
@@ -1,5 +1,6 @@
 body {
   background-color: #d7e0eb !important;
+  
 }
 
 .setup {
@@ -120,7 +121,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #9eccfa;
+  background-color: #23177a;
   padding: 1rem;
   border-radius: 0 30px 30px 0;
 }
@@ -128,6 +129,7 @@ body {
 .form-container h1 {
   margin-top: 10px; /* Reset the default margin */
   margin-bottom: 10px; /* Add margin between h1 and h2 */
+  color: white;
 }
 
 .form-container h2 {
@@ -137,6 +139,7 @@ body {
   font-size: 0.9em;
   margin-top: 10px;
   margin-bottom: 10px;
+  color: white;
 }
 
 .form-container label {
@@ -146,6 +149,7 @@ body {
   padding-right: 350px !important;
   margin-bottom: -20px !important; /* Reduce margin-bottom */
   font-weight: bold !important;
+  color: white;
 }
 
 .form-container input {
@@ -159,16 +163,17 @@ body {
 }
 
 .form-container button {
+  border: 1px solid #d1d5db !important;
   padding: 0.5rem 1rem !important;
-  background-color: #1d2dbb;
-  color: #fff;
-  border: none;
+  background-color: white !important;
+  color:#3824d2 !important;
   border-radius: 10px !important;
   cursor: pointer;
   width: 100% !important;
   height: 2.5rem !important;
-  margin-top: 10px !important;
-  margin-bottom: 15px !important;
+  margin-top: 20px !important;
+
+
 }
 
 .form-container button:hover {
@@ -178,6 +183,7 @@ body {
 .link {
   color: #58a6ff;
   text-decoration: none;
+  color: white;
 }
 
 .link:hover {
@@ -194,4 +200,11 @@ body {
     flex: none;
     width: 100%;
   }
+}
+
+p{
+  color: white !important;
+}
+.white-link {
+  color: white;
 }
